--- a/신한카드&코로나_데이터_기초_통계.ipynb
+++ b/신한카드&코로나_데이터_기초_통계.ipynb
@@ -6,7 +6,7 @@
       "name": "신한카드&코로나 데이터 기초 통계.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOSGd3Y7cjGBVlN2r+DR+Fe",
+      "authorship_tag": "ABX9TyPY6WRqrAqLkM19L6GmKGJS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,24 +32,20 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 34
         },
-        "outputId": "caa268fc-d447-417a-a77d-0134d29a99e8"
+        "outputId": "446a10a2-6d36-4ea0-92fd-79c6ffd37b61"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /gdrive\n"
+            "Drive already mounted at /gdrive; to attempt to forcibly remount, call drive.mount(\"/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -62,9 +58,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 255
+          "height": 102
         },
-        "outputId": "63d2a669-3b67-46f1-abe0-f0756872e974"
+        "outputId": "07bea32b-e6c1-47a0-c066-c6890226ad2e"
       },
       "source": [
         "import matplotlib as mpl\n",
@@ -82,25 +78,16 @@
         "\n",
         "plt.rcParams[\"figure.figsize\"] = (10,10)"
       ],
-      "execution_count": 2,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "fonts-nanum is already the newest version (20170925-1).\n",
             "The following package was automatically installed and is no longer required:\n",
             "  libnvidia-common-440\n",
             "Use 'apt autoremove' to remove it.\n",
-            "The following NEW packages will be installed:\n",
-            "  fonts-nanum\n",
-            "0 upgraded, 1 newly installed, 0 to remove and 35 not upgraded.\n",
-            "Need to get 9,604 kB of archives.\n",
-            "After this operation, 29.5 MB of additional disk space will be used.\n",
-            "Selecting previously unselected package fonts-nanum.\n",
-            "(Reading database ... 144465 files and directories currently installed.)\n",
-            "Preparing to unpack .../fonts-nanum_20170925-1_all.deb ...\n",
-            "Unpacking fonts-nanum (20170925-1) ...\n",
-            "Setting up fonts-nanum (20170925-1) ...\n",
-            "Processing triggers for fontconfig (2.12.6-0ubuntu2) ...\n"
+            "0 upgraded, 0 newly installed, 0 to remove and 35 not upgraded.\n"
           ],
           "name": "stdout"
         }
@@ -145,7 +132,7 @@
         "\n",
         "df_all.to_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/dataset.csv\", encoding='cp949', index=False)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,13 +197,13 @@
         "\n",
         "df_all = pd.read_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/dataset.csv\", encoding = 'cp949')\n",
         "\n",
-        "A = df_all.groupby([df_all['v2'],df_all['gb3'],df_all['sex_ccd'],df_all['cln_age_r']]).count()\n",
-        "A = A.reset_index()\n",
+        "df = df_all.groupby([df_all['v2'],df_all['gb3'],df_all['sex_ccd'],df_all['cln_age_r']]).count()\n",
+        "df = df.reset_index()\n",
         "\n",
-        "print(A[A['ta_ym']==42])\n",
-        "print(A[A['ta_ym']!=42])"
+        "print(df[df['ta_ym']==42])\n",
+        "print(df[df['ta_ym']!=42])"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +235,11 @@
       "metadata": {
         "id": "KnPizVOq3aUd",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 357
+        },
+        "outputId": "c3bee1a8-7dda-46f2-a7fd-41d337d2d4c4"
       },
       "source": [
         "import pandas as pd\n",
@@ -256,9 +247,107 @@
         "\n",
         "df_all = pd.read_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/dataset.csv\", encoding = 'cp949')\n",
         "\n",
-        "for i in range(680):\n",
-        "    plt.plot(range(42), df_all.iloc[42*i:42*i+42,5])\n",
-        "    plt.show()"
+        "df = df_all.groupby([df_all['v2'],df_all['gb3'],df_all['sex_ccd'],df_all['cln_age_r']]).count()\n",
+        "df = df.reset_index()\n",
+        "del df['vlm']\n",
+        "del df['usec']\n",
+        "del df['ta_ym']\n",
+        "\n",
+        "vlm = []\n",
+        "usec = []\n",
+        "\n",
+        "for i in range(len(df)):\n",
+        "    vlm.append(list(df_all.iloc[42*i:42*i+42,5]))\n",
+        "    usec.append(list(df_all.iloc[42*i:42*i+42,6]))\n",
+        "\n",
+        "vlm = np.array(vlm)\n",
+        "usec = np.array(usec)\n",
+        "\n",
+        "print(vlm)\n",
+        "print(usec)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[3.52509012e+08 3.08415254e+08 3.55802686e+08 ... 2.32177745e+08\n",
+            "  3.44888207e+08 8.91923261e+08]\n",
+            " [3.52284417e+08 2.48023915e+08 2.87083464e+08 ... 2.01470629e+08\n",
+            "  3.30425005e+08 3.04093031e+08]\n",
+            " [3.37082495e+08 2.63219937e+08 3.15389577e+08 ... 1.77884601e+08\n",
+            "  2.24794826e+08 2.79881340e+08]\n",
+            " ...\n",
+            " [8.28076230e+10 7.22903639e+10 8.30354224e+10 ... 8.54834451e+10\n",
+            "  1.03337397e+11 8.56067442e+10]\n",
+            " [5.05652798e+10 4.22846154e+10 5.16379874e+10 ... 6.14326027e+10\n",
+            "  8.26170889e+10 6.92847606e+10]\n",
+            " [2.07624502e+10 1.58344576e+10 1.86610513e+10 ... 2.88977871e+10\n",
+            "  3.89149071e+10 3.43919775e+10]]\n",
+            "[[  28203   24361   28811 ...   12788   17469   23049]\n",
+            " [  18402   11846   10498 ...    5044    8763    8668]\n",
+            " [  18889   12827   11434 ...    5806    9544   11281]\n",
+            " ...\n",
+            " [2262617 2003387 2413169 ... 2412699 3135273 2773380]\n",
+            " [1391139 1247412 1528076 ... 1981142 2563337 2301538]\n",
+            " [ 521416  456104  574875 ...  968417 1233010 1150324]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g-P2dNmAIfdu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.cluster import KMeans\n",
+        "\n",
+        "model = KMeans(n_clusters=4)\n",
+        "\n",
+        "model.fit(vlm)\n",
+        "\n",
+        "y_predict = model.predict(vlm)\n",
+        "\n",
+        "df['kmeans'] = y_predict\n",
+        "\n",
+        "print(df.groupby(df['kmeans']).count())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DlEgmYmGNG0V",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.cluster import KMeans\n",
+        "\n",
+        "vlm_lr = []\n",
+        "\n",
+        "for i in range(len(vlm)):\n",
+        "    lr = LinearRegression()\n",
+        "    lr.fit(np.arange(42).reshape(-1,1), vlm[i])\n",
+        "    vlm_lr.append([lr.coef_[0],lr.intercept_])\n",
+        "\n",
+        "vlm_lr = np.array(vlm_lr)\n",
+        "\n",
+        "model = KMeans(n_clusters=4)\n",
+        "\n",
+        "model.fit(vlm_lr)\n",
+        "\n",
+        "y_predict = model.predict(vlm_lr)\n",
+        "\n",
+        "df['kmeans_lr'] = y_predict\n",
+        "\n",
+        "print(df.groupby(df['kmeans_lr']).count())"
       ],
       "execution_count": null,
       "outputs": []
